--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "scripts": {
     "start": "node server.js",
     "start:google": "node examples/google-auth-unleash.js",
-    "start:dev": "NODE_ENV=development supervisor --ignore ./node_modules/,website server-dev.js",
+    "start:dev": "NODE_ENV=development supervisor --ignore ./node_modules/,website server.js",
     "start:dev:pg": "pg_virtualenv npm run start:dev:pg-chain",
     "start:dev:pg-chain": "export DATABASE_URL=postgres://$PGUSER:$PGPASSWORD@localhost:$PGPORT/postgres ; db-migrate up && npm run start:dev",
     "db-migrate": "db-migrate",
@@ -66,6 +66,7 @@
     "compression": "^1.7.3",
     "cookie-parser": "^1.4.4",
     "cookie-session": "^2.0.0-rc.1",
+    "cors": "^2.8.5",
     "db-migrate": "0.11.11",
     "db-migrate-pg": "^1.2.2",
     "db-migrate-shared": "^1.2.0",
